changing old stuff to new stuff

--- a/public/index.html
+++ b/public/index.html
@@ -10,36 +10,36 @@
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <link rel="mask-icon" href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg" color="#f44336">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Care for the Future">
-    <meta name="application-name" content="Care for the Future">
+    <meta name="apple-mobile-web-app-title" content="Solving Crime in No Time">
+    <meta name="application-name" content="Solving Crime in No Time">
     <meta name="msapplication-TileColor" content="#f44336">
     <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
     <meta name="theme-color" content="#f44336">
 
-    <title>Care for the Future - Improving health bit by bit</title>
-    <meta name="description" content="Get a glimpse of the future of medtech in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
-    <meta name="keywords" content="symposium, healthcare, christiaan huygens, computer science, mathematics, health, improvement, knowledge sharing, study association" />
+    <title>Solving Crime in No Time - The strength of digital forensics</title>
+    <meta name="description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
+    <meta name="keywords" content="symposium, digital forensics, christiaan huygens, computer science, mathematics, crime, improvement, knowledge sharing, study association" />
 
-    <meta itemprop="name" content="Medtech symposium by W.I.S.V. 'Christiaan Huygens'" />
-    <meta itemprop="description" content="Get a glimpse of the future of medtech in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
+    <meta itemprop="name" content="Digital forensic symposium by W.I.S.V. 'Christiaan Huygens'" />
+    <meta itemprop="description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
     <meta itemprop="image" content="%PUBLIC_URL%/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@WISVCH" />
-    <meta name="twitter:title" content="Medtech symposium by W.I.S.V. 'Christiaan Huygens'" />
-    <meta name="twitter:description" content="Get a glimpse of the future of medtech in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
+    <meta name="twitter:title" content="Digital forensics symposium by W.I.S.V. 'Christiaan Huygens'" />
+    <meta name="twitter:description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
     <meta name="twitter:creator" content="@WISVCH" />
     <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
 
     <meta property="og:type" content="blog" />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
-    <meta property="og:image:alt" content="Care for the Future - Improving health bit by bit" />
+    <meta property="og:image:alt" content="Solving Crime in No Time - The strength of digital forensics" />
     <meta property="og:image:width" content="1600" />
     <meta property="og:image:height" content="838" />
-    <meta property="og:title" content="Medtech symposium by W.I.S.V. 'Christiaan Huygens'" />
-    <meta property="og:description" content="Get a glimpse of the future of medtech in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
+    <meta property="og:title" content="Digital forensics symposium by W.I.S.V. 'Christiaan Huygens'" />
+    <meta property="og:description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
     <meta property="og:url" content="process.env.PUBLIC_URL" />
-    <meta property="og:site_name" content="Care for the Future - Improving health bit by bit" />
+    <meta property="og:site_name" content="Solving Crime in No Time - The strength of digital forensics" />
     <meta property="article:author" content="Wouter Raateland" />
   </head>
   <body>
