Logo and title changes

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <meta property="og:description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
     <meta property="og:url" content="process.env.PUBLIC_URL" />
     <meta property="og:site_name" content="Solving Crime in No Time - The strength of digital forensics" />
-    <meta property="article:author" content="Wouter Raateland" />
+    <meta property="article:author" content="Scott Jochems" />
   </head>
   <body>
     <noscript>
