--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <link rel="mask-icon" href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg" color="#f44336">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/fingerprint.svg">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein.svg">
     <meta name="apple-mobile-web-app-title" content="Solving Crime in No Time">
     <meta name="application-name" content="Solving Crime in No Time">
     <meta name="msapplication-TileColor" content="#f44336">
