--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <link rel="mask-icon" href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg" color="#f44336">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein.svg">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <meta name="apple-mobile-web-app-title" content="Solving Crime in No Time">
     <meta name="application-name" content="Solving Crime in No Time">
     <meta name="msapplication-TileColor" content="#f44336">
@@ -22,17 +22,17 @@
 
     <meta itemprop="name" content="Digital forensic symposium by W.I.S.V. 'Christiaan Huygens'" />
     <meta itemprop="description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
-    <meta itemprop="image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta itemprop="image" content="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@WISVCH" />
     <meta name="twitter:title" content="Digital forensics symposium by W.I.S.V. 'Christiaan Huygens'" />
     <meta name="twitter:description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
     <meta name="twitter:creator" content="@WISVCH" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png" />
 
     <meta property="og:type" content="blog" />
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png" />
     <meta property="og:image:alt" content="Solving Crime in No Time - The strength of digital forensics" />
     <meta property="og:image:width" content="1600" />
     <meta property="og:image:height" content="838" />
