--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
-    <link rel="mask-icon" href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg" color="#f44336">
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png" color="#f44336">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <meta name="apple-mobile-web-app-title" content="Solving Crime in No Time">
     <meta name="application-name" content="Solving Crime in No Time">
@@ -33,13 +33,13 @@
 
     <meta property="og:type" content="blog" />
     <meta property="og:image" content="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png" />
-    <meta property="og:image:alt" content="Solving Crime in No Time - The strength of digital forensics" />
+    <meta property="og:image:alt" content="Solving Crime in No Time - The Strength of Digital Forensics" />
     <meta property="og:image:width" content="1600" />
     <meta property="og:image:height" content="838" />
     <meta property="og:title" content="Digital forensics symposium by W.I.S.V. 'Christiaan Huygens'" />
     <meta property="og:description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
     <meta property="og:url" content="process.env.PUBLIC_URL" />
-    <meta property="og:site_name" content="Solving Crime in No Time - The strength of digital forensics" />
+    <meta property="og:site_name" content="Solving Crime in No Time - The Strength of Digital Forensics" />
     <meta property="article:author" content="Scott Jochems" />
   </head>
   <body>
