--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
-    <link rel="mask-icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png" color="#f44336">
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png" color="#202e25">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/sympo-logo-klein-round.png">
     <meta name="apple-mobile-web-app-title" content="Solving Crime in No Time">
     <meta name="application-name" content="Solving Crime in No Time">
-    <meta name="msapplication-TileColor" content="#f44336">
+    <meta name="msapplication-TileColor" content="#202e25">
     <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
-    <meta name="theme-color" content="#f44336">
+    <meta name="theme-color" content="#202e25">
 
     <title>Solving Crime in No Time - The strength of digital forensics</title>
     <meta name="description" content="Get a glimpse of the future of digital forensics in this symposium organised by computer science and mathematics study association W.I.S.V. 'Christiaan Huygens'." />
